<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IBS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">EINSTELLUNGEN</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="ibstheme_tab_room_overview">Room Overview</string>
    <string name="ibstheme_tab_room_favorit">Favoriten</string>
    <string name="title_activity_speaker_acitvity">SpeakerAcitvity</string>
    <string name="button_add_room">RAUM SPEICHERN</string>
    <string name="room_add_headline">Raum Hinzufügen</string>
    <string name="room_add_width">BREITE</string>
    <string name="room_add_height">HÖHE</string>
    <string name="room_add_length">LÄNGE</string>
    <string name="room_add_name">RAUMNAME</string>
    <string name="halterungHinzufuegenButton">HALTERUNG HINZUFÜGEN +</string>
    <string name="title_activity_set_up_speaker">SetUpSpeaker</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find People</item>
        <item>Photos</item>
        <item>Communities</item>
        <item>Pages</item>
        <item>What\'s Hot</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_room_detail">RoomDetail</string>

</resources>
